force-app/main/default/objects/Demo_Video_Call__c/Demo_Video_Call__c.object-meta.xml
<CustomObject>
    <label>Demo Video Call</label>
    <nameField>
        <displayFormat>VC-{0000}</displayFormat>
        <label>Video Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Video Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>