force-app/main/default/objects/Demo_Video_Call__c/fields/Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Minutes__c</fullName>
    <label>Call Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>