force-app/main/default/objects/Demo_Video_Call__c/fields/Call_Explorer_QA_JSON__c.field-meta.xml
<CustomField>
    <fullName>Call_Explorer_QA_JSON__c</fullName>
    <label>Call Explorer QA Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>