force-app/main/default/objects/Demo_Video_Call__c/fields/Call_Started__c.field-meta.xml
<CustomField>
    <fullName>Call_Started__c</fullName>
    <label>Call Started</label>
    <type>DateTime</type>
</CustomField>