force-app/main/default/objects/Demo_Video_Call__c/fields/Call_Title__c.field-meta.xml
<CustomField>
    <fullName>Call_Title__c</fullName>
    <label>Call Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>