force-app/main/default/objects/Demo_Video_Call__c/fields/Generative_Insights_JSON__c.field-meta.xml
<CustomField>
    <fullName>Generative_Insights_JSON__c</fullName>
    <label>Generative Insights Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>