force-app/main/default/objects/Demo_Video_Call__c/fields/Insights_JSON__c.field-meta.xml
<CustomField>
    <fullName>Insights_JSON__c</fullName>
    <label>Insights Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>