force-app/main/default/objects/Demo_Video_Call__c/fields/Internal_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rep_Name__c</fullName>
    <label>Internal Rep Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>