force-app/main/default/objects/Demo_Video_Call__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <label>Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>