force-app/main/default/objects/Demo_Video_Call__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Video Calls</relationshipLabel>
    <relationshipName>Demo_Video_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>