force-app/main/default/objects/Demo_Video_Call__c/fields/Related_Record_Display__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Display__c</fullName>
    <label>Related Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>