force-app/main/default/objects/Demo_Video_Call__c/fields/Summary_Call_Overview__c.field-meta.xml
<CustomField>
    <fullName>Summary_Call_Overview__c</fullName>
    <label>Call Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>