force-app/main/default/objects/Demo_Video_Call__c/fields/Summary_Customer_Impression__c.field-meta.xml
<CustomField>
    <fullName>Summary_Customer_Impression__c</fullName>
    <label>Customer Impression</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>