force-app/main/default/objects/Demo_Video_Call__c/fields/Summary_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Summary_Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>