force-app/main/default/objects/Demo_Video_Call__c/fields/Talk_Ratio_Customer__c.field-meta.xml
<CustomField>
    <fullName>Talk_Ratio_Customer__c</fullName>
    <label>Customer Talk Ratio</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>