force-app/main/default/objects/Demo_Video_Call__c/fields/Transcript_JSON__c.field-meta.xml
<CustomField>
    <fullName>Transcript_JSON__c</fullName>
    <label>Transcript Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>